--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@
 body {
   margin: auto;
   font-family: 'Varela Round', sans-serif;
-  background: linear-gradient(to bottom right, var(--color-primary), var(--color-primary-light));
+  background: var(--color-primary);
   height: 100%;
   color: white;
 }
@@ -97,6 +97,63 @@ body {
 .main-content {
   margin: auto;
   width: 65%;
+}
+
+.api-examples {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+
+.carContainer {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+.car-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  border-bottom: #ffffff solid 1px;
+  margin-bottom: 15px;
+}
+
+.car-header h2 {
+  margin-bottom: 0%;
+}
+
+.carList {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.card {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.car-name, .car-color, .car-year {
+  width: 33%;
+  text-align: left;
+}
+
+.add-car-container {
+  width: 25%;
+ 
+}
+
+.docs {
+  margin: auto;
+
+  width: 50%;
 }
 
 @media screen and (min-width: 300px) and (max-width: 400px) {
